<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">月末盘点</string>
    <string name="action_settings">Settings</string>
    <string name="first">首页</string>
    <string name="second">已盘点信息</string>

    <!-- 菜单 -->
    <string name="menu_exit">退出</string>

    <!-- 按钮 -->
    <string name="head_back">返回</string>
    <string name="btn_save">保存</string>
    <string name="pmk_add">盘点编号</string>
    <string name="pmp_add">盘点作业</string>
    <string name="capture_text">条码扫描</string>

    <!-- 标题 -->
    <string name="home_title">已盘点列表</string>
    <string name="pd_title">添加盘点编号</string>

    <!-- 登录 -->
    <string name="strInputAccHint">输入帐号</string>
    <string name="strInputPwdHint">输入密码</string>
    <string name="strAccInputLabel">账号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="login">登 录</string>

    <!-- 盘点编号维护 -->
    <string name="pdcode">工厂名</string>
    <string name="pdtime">盘点时间</string>
    <string name="pd_time">输入盘点时间</string>
    <string name="pdnum">盘点编号</string>
    <string name="pd_num">输入盘点编号</string>
    <string name="pd_memo">输入备注信息</string>

    <!-- 盘点操作 -->
    <string name="pdtrkno">条码编号</string>
    <string name="pd_trkno">输入条码编号</string>
    <string name="psqwt">实际重量</string>
    <string name="pd_psqwt">输入实际重量信息</string>
    <string name="pd_all">已盘点件数:</string>

    <!-- 盘点信息 -->
    <string name="pd_bartyp">条码类型</string>
    <string name="pd_plant">工厂名</string>
    <string name="pd_pdcno">品种</string>
    <string name="pd_npmno">机台</string>
    <string name="pd_widcal">理论幅宽</string>
    <string name="pd_lencal">理论线长</string>
    <string name="pd_amcal">理论重量</string>
    <string name="pd_amcat">实际重量</string>
    <string name="pd_whoname">盘点人</string>
    <string name="pd_whendo">盘点时间</string>

    <!-- 信息提示 -->
    <string name="no_authdo">无权限进行盘点作业</string>
    <string name="no_authedit">无权限进行盘点编号编辑</string>
    <string name="msg_login_null">用户名为空</string>
    <string name="msg_pwd_null">密码为空</string>
    <string name="login_false">用户名或密码错误</string>
    <string name="pdnum_null">盘点编号为空</string>
    <string name="pdtime_null">盘点日期为空</string>
    <string name="pdtime_format_wrong">盘点日期输入错误</string>
    <string name="pdtrkno_null">条码编号为空</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">网络不给力，请稍后再试</string>
    <string name="pddate_null">当月未盘点</string>
    <string name="pdnum_wrong">您填写是非本月的盘点编号</string>
    <string name="pdnum_same">盘点编号已存在</string>
    <string name="network_disconnect">移动网络未开启</string>
    <string name="network_slow">当前网络不给力，请过会儿再试</string>
    <string name="logining">正在登陆中</string>
    <string name="network_timeout">网络连接超时</string>

    <!-- 应用版本更新 -->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>