<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_bg" >

    <ViewSwitcher
        android:id="@+id/logindialog_view_switcher"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >

        <RelativeLayout
            android:id="@+id/relativelayout01"
            android:layout_width="fill_parent"
            android:layout_height="224dp"
            android:layout_marginLeft="15.0px"
            android:layout_marginRight="15.0px"
            android:layout_marginTop="62.0px" >

            <EditText
                android:id="@+id/login_edit_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5.0px"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:background="@drawable/qq_edit_login"
                android:hint="@string/strInputAccHint"
                android:inputType="number"
                android:maxLength="10"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_account"
                android:layout_alignLeft="@+id/login_edit_account"
                android:layout_alignTop="@+id/login_edit_account"
                android:layout_marginRight="15.0sp"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strAccInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <ImageButton
                android:id="@+id/ImageButton01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_account"
                android:layout_alignRight="@+id/login_edit_account"
                android:layout_alignTop="@+id/login_edit_account"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/more_select" />

            <EditText
                android:id="@+id/login_edit_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_edit_account"
                android:layout_alignRight="@+id/login_edit_account"
                android:layout_below="@+id/login_edit_account"
                android:hint="@string/strInputPwdHint"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/qq_edit_login"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="45.0sp"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_pwd"
                android:layout_alignRight="@+id/TextView01"
                android:layout_alignTop="@+id/login_edit_pwd"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strPswInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <ImageButton
                android:id="@+id/ImageButton02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_pwd"
                android:layout_alignRight="@+id/login_edit_pwd"
                android:layout_alignTop="@+id/login_edit_pwd"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/more_select" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/login_edit_pwd"
                android:layout_alignLeft="@+id/login_edit_pwd"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@id/login_edit_pwd"
                android:layout_marginBottom="36dp"
                android:background="@drawable/login_btn"
                android:text="@string/login" />
        </RelativeLayout>

        <View
            android:id="@+id/login_loading"
            android:layout_width="135.0dip"
            android:layout_height="135.0dip"
            android:layout_gravity="center"
            android:background="@anim/login_loading" />
    </ViewSwitcher>

</LinearLayout>